Rewrote server responds on specified port test to not use deprecated URL constructor